Support querying multiple closest lsif dumps at once.
